Se añade una nueva revisión del codigo en R, en el que ya se ha conseguido que se carguen todas las paginas de la BBDD de videojuegos y que se genere un solo dataframe

--- a/videogamesScrapper.rmd
+++ b/videogamesScrapper.rmd
@@ -60,9 +60,43 @@ datos en función del ámbito de aplicación.
 * Desarrollar la capacidad de búsqueda, gestión y uso de información y recursos
 en el ámbito de la ciencia de datos.
 
+## Descripción de la Práctica a realizar
+El objetivo de esta actividad será la creación de un dataset a partir de los datos
+contenidos al web. Tenéis que indicar las siguientes características del dataset
+general:  
+
+1. Título del dataset. Poned un título que sea descriptivo.
+2. Subtítulo del dataset. Agregad una descripción ágil de vuestro conjunto de
+datos por vuestro subtítulo.
+3. Imagen. Agregad una imagen que identifique vuestro dataset visualmente
+4. Contexto. ¿Cuál es la materia del conjunto de datos?
+5. Contenido. ¿Qué campos incluye? ¿Cuál es el periodo de tiempo de los datos
+y cómo se ha recogido?
+6. Agradecimientos. ¿Quién es propietario del conjunto de datos? Incluid citas de
+investigación o análisis anteriores.
+7. Inspiración. ¿Por qué es interesante este conjunto de datos? ¿Qué preguntas
+le gustaría responder la comunidad?
+8. Licencia. Seleccionad una de estas licencias y decid porqué la habéis
+seleccionado:  
+
++ Released Under CC0: Public Domain License
++ Released Under CC BY-NC-SA 4.0 License
++ Released Under CC BY-SA 4.0 License
++ Database released under Open Database License, individual contents
+under Database Contents License
++ Other (specified above)
++ Unknown License
+
+9. Código: Hay que adjuntar el código con el que habéis generado el dataset,
+preferiblemente con R o Python, que os ha ayudado a generar el dataset
+10. Dataset: Dataset en formato CSV
 
 
+# Realización de la práctica
 
+## Título del dataset
+El dat
 
+## Subtítulo del dataset
 
 
