--- a/pdf/videogamesScraper.rmd
+++ b/pdf/videogamesScraper.rmd
@@ -1,22 +1,25 @@
 ---
-title: "videogamesScraper"
+title: "videogamesScraper: Compilación de videojuegos desde 1976 hasta 2018"
 author: "Ricardo Garcia Ruiz"
 date: "17 de marzo de 2018"
 output:
-  html_document:
-    toc: TRUE
-    highlight: default
-    number_sections: true
-    toc_depth: 3
   pdf_document:
     toc: TRUE
     highlight: default
     number_sections: true
     toc_depth: 3
+    keep_tex: true
+  html_document:
+    toc: TRUE
+    number_sections: true
+    toc_depth: 3
+    theme: cerulean
+    highlight: tango
   word_document:
     toc: TRUE
     highlight: default
     toc_depth: 3
+bibliography: bibliografia.bib
 ---
 
 
@@ -27,7 +30,7 @@ options(OutDec=",")
 
 #Características de la práctica
 
-##Presentación   
+##Presentación  
 
 En esta práctica se elabora un caso práctico orientado a aprender a identificar los datos
 relevantes por un proyecto analítico y usar las herramientas de extracción de datos.
@@ -91,12 +94,127 @@ under Database Contents License
 preferiblemente con R o Python, que os ha ayudado a generar el dataset
 10. Dataset: Dataset en formato CSV
 
+\clearpage
 
 # Realización de la práctica
 
-## Título del dataset
-El dataset
+## Título del dataset: Descripción  
+
+El conjunto de datos escogido para esta práctica ha sido el de la web http://www.retrocollect.com/. Se pretende compilar una base de datos de videojuegos, y para ello se ha escogido la que ofrece RetroCollect, que corresponde con videojuego de los denominados **'retro'**.  
+
+<p align="center">
+  <img src="http://www.retrocollect.com/videogamedatabase/public/images/various/RetroCollect-Logo.png" width="250"/>
+</p>
+
+\begin{figure}[h!]
+\centering
+\includegraphics{RetroCollect-Logo.png}
+\end{figure}
+
+
+El periodo de datos que abarca la base de datos está entre 1976 y 2018, existiendo algunos videojuegos que no están correctamente datados en la própia página web.  
+
+Las principales variables de este conjunto corresponden con la **fecha**, el **nombre** del videojuego y la **plataforma** de juegos.  
 
 ## Subtítulo del dataset
 
+
+## Imagen identificativa
+
+<p align="center">
+  <img src="https://www.gamestop.com/gs/images/content-pdp/Loot_images/DOOM_6.66update.jpg" width="750"/></p>
+<p align="center">DOOM, el juego icónico por excelencia entre los juegos retro que dominaron la época de los 80
+</p>
+
+\begin{figure}[h!]
+\centering
+\includegraphics{DOOM_6.66update.jpg}
+\end{figure}
+
+
+## Contexto
+
+El conjunto de datos se corresponde con videojuegos de tipo *'retro'* que se hayan poblicado en un periodó que abarca 1976 al 2018. Aunque existen videojuegos que abarcan desde los años 50, estos son considerados como *arcanos*, y en algunos casos no son mas que prototipos de los juegos que verdaderamente empezaron a comercializarse en la década de los 70 del siglo pasado.  
+
+Entre ellos pueden encontrarse todo tipo de géneros: 
+
+* Action
+* Adventure
+* Compilation
+* DLC
+* Add-on
+* Educational
+* Puzzle
+* Racing
+* Driving
+* Role-Playing (RPG)
+* Simulation
+* Special Edition
+* Sports
+* Strategy/Tactics
+
+
+## Contenido
+
+Para cada videojuego, el cual se corresponde con un registro en el conjunto de datos, se recogen las siguientes características:  
+
+1. **Original System**: .
+2. **Title**: Titulo original del videojuego (en ingles).
+3. **Year**: año de publicación del videojuego.
+4. **Publisher**: compañía que lo lanzó al mercado comercial en el año citado.
+5. **Developer**: compañía desarrolladora del videojuego. Puede coincidir en algunos casos con el *'Publisher'* pero es importante, ya que en los 70, 80 y 90 del siglo pasado había muchas compañías que desarrollaban los juegos por encargo.
+6. **Países de lanzamiento**: Se agrupan en tres categorías (Europe, US y Japan). Cada registro puede estar vacío o con una **'x'**. La **'x'** indica que en ese país o región no fue comercializado:  
+    1. **Europe**: cualquier país de Europa.  
+    2. **US**: en Estados Unidos.  
+    3. **Japan**: en Japón.  
+
+
+*RetroCollect* solo almacena datos de juegos que se consideran **'retro'**, de forma que aunque algunos juegos puedan ser sobradamente conocidos, deben alcanzar la categoría de **'retro'** para poder estar incluídos en esta web.  
+
+Existen otras web que compilan datos sobre videojuegos, pero la extracción de datos únicamente de videojuegos *retro* requería de un tratamiento posterior que no es el objetivo de esta práctica, sino el adquirir los datos directamente de la web.
+
+\clearpage
+
+## Agradecimientos
+
+Los datos han sido compilados desde la base de datos online [RetroCollect](http://www.retrocollect.com/). Se ha utilizado el lenguaje '**R**' y de técnicas de *Web Scraping* para extraer la información alojada en las múltiples páginas de gestión de esta base de datos online.
+
+En la presetnación de este trabajo se han utilizado referencias a los siguientes trabajos:  
+
+1. Simon Munzert, Christian Rubba, Peter Meißner, Dominic Nyhuis. (2015). _Automated Data Collection with R: A Practical Guide to Web Scraping and Text Mining._ John Wiley & Sons
+2. Garcia Ruiz, Ricardo. (2014). _Estudio y caracterización de marcas de videojuegos mediante análisis de la producción de patentes y el desarrollo técnico de software para plataformas de videojuegos._ Universitat Internacional de Catalunya, DOI: 10.13140/2.1.5162.0166. 
+
+## Inspiración
+
+El conjunto de datos puede resultar muy útil para trabajos relacionados con la minería de datos relativa al comportamiento de los videojuegos [@ruiz2014estudio].  
+
+Tambien sirve para verificar el comportamiento analítico sobre los desarrolladores y publicadores de videojuegos a lo largo del tiempo.
+
+De igual manera, también puede utilizar verificar el comportamiento de aceptación de los diversos videojuegos a lo largo del tiempo en las distintas zonas geográficas, y su impacto relativo o absoluto.
+
+## Licencia
+
+La licencia escogida para la publicación de este conjunto de datos ha sido **CC BY-NC-SA 3.0 ES**. Los motivos que han llevado a la elección de esta licencia tienen que ver con la idoneidad de las cláusulas que esta presenta en relación con el trabajo realizado:
+
+Se permite con nuestro trabajo y la base de datos extraída de la web:  
+
+* *Compartir* — copiar y redistribuir el material en cualquier medio o formato
+* *Adaptar* — remezclar, transformar y crear a partir del material
+
+Por otro lado, la licencia activa las siguientes restricciones:  
+
+* **Reconocimiento**: Debe reconocer adecuadamente la autoría, proporcionar un enlace a la licencia e indicar si se han realizado cambios. Puede hacerlo de cualquier manera razonable, pero no de una manera que sugiera que tiene el apoyo del licenciador o lo recibe por el uso que hace.
+* **NoComercial**: No puede utilizar el material para una finalidad comercial.
+* **CompartirIgual**: Si remezcla, transforma o crea a partir del material, deberá difundir sus contribuciones bajo la misma licencia que el original.
+* **No hay restricciones adicionales**: No puede aplicar términos legales o medidas tecnológicas que legalmente restrinjan realizar aquello que la licencia permite.
+
+## Código fuente y dataset
+
+Tanto el código fuente escrito para la extracción de datos como el dataset generado pueden ser accedidos a través de [este enlace](https://github.com/rgarciarui/videogamesScrapper).  
+
+Para el desarrollo de la práctica se han tomado en consideración las técnicas de Web Scraping de [@munzert2014automated].
+
+\clearpage
+
+## Recursos
 
