Modificacion del titulo del dataset y justificación de la imagen de retrocollect

--- a/pdf/videogamesScraper.tex
+++ b/pdf/videogamesScraper.tex
@@ -210,14 +210,19 @@ características del dataset general:
 
 \section{Realización de la práctica}\label{realizacion-de-la-practica}
 
-\subsection{Título del dataset:
-Descripción}\label{titulo-del-dataset-descripcion}
+\subsection{Título del dataset: Base de datos general de videojuegos
+retro}\label{titulo-del-dataset-base-de-datos-general-de-videojuegos-retro}
 
-El conjunto de datos escogido para esta práctica ha sido el de la web
-\url{http://www.retrocollect.com/}. Se pretende compilar una base de
-datos de videojuegos, y para ello se ha escogido la que ofrece
-RetroCollect, que corresponde con videojuego de los denominados
-\textbf{`retro'}.
+Para construir nuestro dataset \textbf{Base de datos general de
+videojuegos retro}, el conjunto de datos escogido para esta práctica ha
+sido el de la web \url{http://www.retrocollect.com/}. Se pretende
+compilar una base de datos de videojuegos retro, y despues de un
+exhaustivo análisis de las diversas compilaciones de videojuegos retro
+existentes en Internet, se ha escogido la que ofrece RetroCollect, que
+corresponde con videojuegos de los denominados \textbf{`retro'}, y que
+ha resultado ser amplia y diversificada.
+
+Logotipo de RetroCollect extraído de \url{http://www.retrocollect.com/}
 
 \begin{figure}[h!]
 \centering
