--- a/pdf/videogamesScraper.rmd
+++ b/pdf/videogamesScraper.rmd
@@ -3,18 +3,18 @@ title: "videogamesScraper: Compilación de videojuegos desde 1976 hasta 2018"
 author: "Ricardo Garcia Ruiz"
 date: "17 de marzo de 2018"
 output:
-  pdf_document:
-    toc: TRUE
-    highlight: default
-    number_sections: true
-    toc_depth: 3
-    keep_tex: true
   html_document:
     toc: TRUE
     number_sections: true
     toc_depth: 3
     theme: cerulean
     highlight: tango
+  pdf_document:
+    toc: TRUE
+    highlight: default
+    number_sections: true
+    toc_depth: 3
+    keep_tex: true
   word_document:
     toc: TRUE
     highlight: default
@@ -98,13 +98,11 @@ preferiblemente con R o Python, que os ha ayudado a generar el dataset
 
 # Realización de la práctica
 
-## Título del dataset: Descripción  
+## Título del dataset: Base de datos general de videojuegos retro  
 
-El conjunto de datos escogido para esta práctica ha sido el de la web http://www.retrocollect.com/. Se pretende compilar una base de datos de videojuegos, y para ello se ha escogido la que ofrece RetroCollect, que corresponde con videojuego de los denominados **'retro'**.  
+Para construir nuestro dataset **Base de datos general de videojuegos retro**, el conjunto de datos escogido para esta práctica ha sido el de la web http://www.retrocollect.com/. Se pretende compilar una base de datos de videojuegos retro, y despues de un exhaustivo análisis de las diversas compilaciones de videojuegos retro existentes en Internet, se ha escogido la que ofrece RetroCollect, que corresponde con videojuegos de los denominados **'retro'**, y que ha resultado ser amplia y diversificada.  
 
-<p align="center">
-  <img src="http://www.retrocollect.com/videogamedatabase/public/images/various/RetroCollect-Logo.png" width="250"/>
-</p>
+<div style="text-align: center;">Logotipo de <b>RetroCollect</b> extraído de http://www.retrocollect.com/ <img src="RetroCollect-Logo.png" width="480px" height="480px" /></div>
 
 \begin{figure}[h!]
 \centering
@@ -115,8 +113,6 @@ El conjunto de datos escogido para esta práctica ha sido el de la web http://ww
 El periodo de datos que abarca la base de datos está entre 1976 y 2018, existiendo algunos videojuegos que no están correctamente datados en la própia página web.  
 
 Las principales variables de este conjunto corresponden con la **fecha**, el **nombre** del videojuego y la **plataforma** de juegos.  
-
-## Subtítulo del dataset
 
 
 ## Imagen identificativa
