--- a/pdf/videogamesScraper.tex
+++ b/pdf/videogamesScraper.tex
@@ -237,16 +237,16 @@ Las principales variables de este conjunto corresponden con la
 \textbf{fecha}, el \textbf{nombre} del videojuego y la
 \textbf{plataforma} de juegos.
 
-\subsection{Subtítulo del dataset}\label{subtitulo-del-dataset}
-
 \subsection{Imagen identificativa}\label{imagen-identificativa}
 
-DOOM, el juego icónico por excelencia entre los juegos retro que
-dominaron la época de los 80
+Protagonistas del videojuego iconico por excelencia: Mario Bros.
+
+Cortesía de Alexas,
+\url{https://pixabay.com/es/mario-luigi-yoschi-cifras-gracioso-1557240/}
 
 \begin{figure}[h!]
-\centering
-\includegraphics{DOOM_6.66update.jpg}
+  \centering
+  \includegraphics[width=.8\textwidth]{mario-1557240_1920.jpg}
 \end{figure}
 
 \subsection{Contexto}\label{contexto}
